--- a/chirp/app/views/layouts/application.html.erb
+++ b/chirp/app/views/layouts/application.html.erb
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Chirp</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
 
-<%= yield %>
+<html lang="en">
+    <head>
+        <title>Chirp</title>
+        <%= stylesheet_link_tag "application", :media => "all" %>
+        <%= csrf_meta_tags %>
+    </head>
 
-</body>
+    <body>
+        <%= yield %>
+        <%= javascript_include_tag "application" %>
+    </body>
 </html>
