--- a/chirp/app/assets/stylesheets/application.css
+++ b/chirp/app/assets/stylesheets/application.css
@@ -29,9 +29,10 @@ body {
     clear: both;
     color: #516064;
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, arial, sans-serif;
+    font-size: 18px;
     font-weight: 300;
     margin: 0 auto 0 auto;
-    width: 640px;
+    width: 480px;
 }
 
 
@@ -43,7 +44,7 @@ header {
     margin-bottom: 42px;
 }
 
-header hgroup h1 {
+h1 {
     color: #D1D9DC;
     font-size: 102px;
     letter-spacing: -4px;
@@ -61,8 +62,37 @@ article {
     margin-bottom: 50px;
 }
 
-article p {
-    font-size: 16px;
+section {
+    margin-bottom: 28px;
+}
+
+#post {
+    -moz-border-radius: 4px 4px 4px 4px;
+    -webkit-border-radius: 4px;
+    border: 1px solid #959EA1;
+    color: #B62F2F;
+    display: block;
+    font: 18px "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, arial, sans-serif;
+    line-height: 150%;
+    margin-top: 0.75em;
+    padding: 0.2em;
+    width: 75%;
+}
+
+#countdown-container {
+    width: 75%;
+}
+
+#countdown {
+    float: right;
+    font-size: 12px;
+}
+
+.negative {
+    color: #B62F2F !important;
+}
+
+p {
     line-height: 175%;
     margin-bottom: 28px;
     width: 75%;
