--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -18,9 +18,14 @@
 -#           <http://www.gnu.org/licenses/>.                                  #
 -#----------------------------------------------------------------------------#
 
+
+
 !!!
 %html
   %head
     %title Rubber Duckie
+    %link(rel="stylesheet" href="/style.css")
   %body
     %h1 Rubber Duckie
+    %script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js")
+    %script(src="/script.js")
