--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -27,5 +27,8 @@
     %link(rel="stylesheet" href="/style.css")
   %body
     %h1 Rubber Duckie
+    %form{action: "/search", method: "get"}
+      %fieldset
+        %input{type: "text", name: "query", class: "text"}
     %script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js")
     %script(src="/script.js")
