--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -25,7 +25,7 @@
 %html
   %head
     %title Rubber Duckie
-    %link(rel="stylesheet" href="/style.css")
+    %link{rel: "stylesheet", href: "/style.css"}
 
   %body
     %h1 Rubber Duckie
@@ -38,5 +38,5 @@
 
     %img#result{src: "", alt: ""}
 
-    %script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js")
-    %script(src="/script.js")
+    %script{src: "https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"}
+    %script{src: "/script.js"}
