started working on JavaScript

--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -30,9 +30,9 @@
   %body
     %h1 Rubber Duckie
 
-    %form{action: "/search", method: "get"}
+    %form#search{method: "get", action: "/search"}
       %fieldset
-        %input{type: "text", name: "query", class: "text"}
+        %input{name: "query", type: "text"}
 
     #results
 
