--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -36,7 +36,8 @@
 
     #results
 
-    %img#result{src: "", alt: ""}
+    #result
+      %img{src: "", alt: ""}
 
     %script{src: "https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"}
     %script{src: "/script.js"}
