--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -37,7 +37,7 @@
     #results
 
     #result
-      %img{src: "", alt: ""}
+      %img{class: "result", src: "", alt: ""}
 
     %script{src: "https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"}
     %script{src: "/script.js"}
