--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -39,5 +39,12 @@
     #result
       %img{class: "result", src: "", alt: ""}
 
+    %p#footer
+      Powered by
+      <a href="http://www.ruby-lang.org/en/">Ruby</a>,
+      <a href="http://www.sinatrarb.com/">Sinatra</a>,
+      <a href="http://www.flickr.com/">Flickr</a>, and
+      Rule 34.
+
     %script{src: "https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"}
     %script{src: "/script.js"}
