--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -37,7 +37,7 @@
     #results
 
     #result
-      %img{class: "result", src: "", alt: ""}
+      %img{class: "result", src: "", alt: "result"}
 
     %p#footer
       Powered by
