--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -22,29 +22,34 @@
 
 !!!
 
-%html
+%html{lang: "en"}
   %head
-    %title Rubber Duckie
+    %title rubber duckie
+    %meta{charset: "utf-8"}
     %link{rel: "stylesheet", href: "/style.css"}
 
   %body
-    %h1 Rubber Duckie
+    %hgroup
+      %h1 Rubber Duckie
+      %h2 Unsafe Photo Search
 
-    %form#search{method: "get", action: "/search"}
-      %fieldset
-        %input{name: "query", type: "text"}
+    %article
+      %form#search{method: "get", action: "/search"}
+        %fieldset
+          %input{name: "query", type: "text"}
 
-    #results
+      #results
 
-    #result
-      %img{class: "result", src: "", alt: "result"}
+      #result
+        %img{class: "result", src: "https://en.gravatar.com/brainix", alt: "result", style: "display: none"}
 
-    %p#footer
-      Powered by
-      <a href="http://www.ruby-lang.org/en/">Ruby</a>,
-      <a href="http://www.sinatrarb.com/">Sinatra</a>,
-      <a href="http://www.flickr.com/">Flickr</a>, and
-      Rule 34.
+    %footer
+      %p
+        Powered by
+        <a href="http://www.ruby-lang.org/en/">Ruby</a>,
+        <a href="http://www.sinatrarb.com/">Sinatra</a>,
+        <a href="http://www.flickr.com/">Flickr</a>, and
+        Rule 34.
 
     %script{src: "https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"}
     %script{src: "/script.js"}
