--- a/duckie/public/style.css
+++ b/duckie/public/style.css
@@ -24,9 +24,70 @@
   margin: 0;
   outline: 0;
   padding: 0;
+  text-transform: lowercase;
+}
+
+body {
+  color: #516064;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, arial, sans-serif;
+  margin: 0 auto 0 auto;
+  width: 640px;
+}
+
+a {
+  color: #B62F2F;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+hgroup, article {
+  margin-bottom: 50px;
+}
+
+h1 {
+  color: #D1D9DC;
+  font-size: 102px;
+  letter-spacing: -7px;
+  margin-top: -15px;
+  margin-left: -4px;
+  margin-bottom: -25px;
+}
+
+h1 a {
+  color: #D1D9DC;
+}
+
+h1 a:hover {
+  color: #B62F2F;
+  text-decoration: none;
+}
+
+h2 {
+  color: #959EA1;
+  font-size: 35px;
+  font-weight: 300;
+  letter-spacing: -2px;
+}
+
+fieldset {
+  border: none;
+}
+
+input {
+  border-radius: 4px;
+  border: 1px solid #959EA1;
+  color: #B62F2F;
+  font: 16px "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, arial, sans-serif;
+  line-height: 150%;
+  margin-top: 0.75em;
+  padding: 0.2em;
+  width: 75%;
 }
 
 .result {
-  max-width: 192px;
-  max-height: 192px;
+  max-width: 100px;
+  max-height: 100px;
 }
