dramatically improved user experience

--- a/duckie/public/style.css
+++ b/duckie/public/style.css
@@ -31,7 +31,7 @@ body {
   color: #516064;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, arial, sans-serif;
   margin: 0 auto 0 auto;
-  width: 640px;
+  width: 800px;
 }
 
 a {
@@ -84,10 +84,16 @@ input {
   line-height: 150%;
   margin-top: 0.75em;
   padding: 0.2em;
-  width: 75%;
+  width: 480px;
 }
 
-.result {
-  max-width: 100px;
-  max-height: 100px;
+.frame {
+  display: inline-block;
+  width: 200px;
+  height: 200px;
+}
+
+.photo {
+  max-width: 190px;
+  max-height: 190px;
 }
