--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -43,7 +43,8 @@
     %article
       #results
       #result
-        %img{class: "result", src: "https://en.gravatar.com/brainix", alt: "result", style: "display: none"}
+        .frame
+          %img{class: "photo", src: "http://1.gravatar.com/avatar/1fd20d1487b58d9071eb860447c65e24?size=420", alt: "result"}
 
     %footer
       %p
