started wiring up Facebox

--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -26,6 +26,7 @@
   %head
     %title rubber duckie
     %meta{charset: "utf-8"}
+    %link{rel: "stylesheet", href: "/facebox.css"}
     %link{rel: "stylesheet", href: "/style.css"}
 
   %body
@@ -55,4 +56,5 @@
         Rule 34.
 
     %script{src: "https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"}
+    %script{src: "/facebox.js"}
     %script{src: "/script.js"}
