finished wiring up Facebox

--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -45,7 +45,8 @@
       #results
       #result
         .frame
-          %img{class: "photo", src: "http://1.gravatar.com/avatar/1fd20d1487b58d9071eb860447c65e24?size=420", alt: "result"}
+          %a{class: "photo", rel: "facebox", href: "http://1.gravatar.com/avatar/1fd20d1487b58d9071eb860447c65e24?size=420"}
+            %img{class: "photo", src: "http://1.gravatar.com/avatar/1fd20d1487b58d9071eb860447c65e24?size=420", alt: "result"}
 
     %footer
       %p
