--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -44,9 +44,10 @@
     %article
       #results
       #result
-        .frame
-          %a{class: "photo", rel: "facebox", href: "http://1.gravatar.com/avatar/1fd20d1487b58d9071eb860447c65e24?size=420"}
-            %img{class: "photo", src: "http://1.gravatar.com/avatar/1fd20d1487b58d9071eb860447c65e24?size=420", alt: "result"}
+        .frame-outer
+          .frame-inner
+            %a{class: "photo", rel: "facebox", href: "http://1.gravatar.com/avatar/1fd20d1487b58d9071eb860447c65e24?size=420"}
+              %img{class: "photo", src: "http://1.gravatar.com/avatar/1fd20d1487b58d9071eb860447c65e24?size=420", alt: "result"}
 
     %footer
       %p
