--- a/duckie/public/style.css
+++ b/duckie/public/style.css
@@ -104,9 +104,11 @@ img.photo {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  max-width: 140px;
-  max-height: 140px;
-  opacity: 0.75;
+  max-width: 120px;
+  max-height: 120px;
+  border: 1px solid #959EA1;
+  padding: 5px;
+  opacity: 0.85;
 }
 
 img.photo:hover {
