got Bing unsafe image search working (Ruby array subtraction is brain dead)

--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -37,7 +37,7 @@
       %h2 Unsafe Photo Search
 
     %article
-      %form#search{method: "get", action: "/search"}
+      %form#search{method: "get", action: "/search", autocomplete: "off"}
         %fieldset
           %input{name: "query", type: "text"}
 
