--- a/duckie/public/style.css
+++ b/duckie/public/style.css
@@ -65,7 +65,7 @@ h1 a:hover {
   text-decoration: none;
 }
 
-h2 {
+h2, h3 {
   color: #959EA1;
   font-size: 35px;
   font-weight: 300;
@@ -85,6 +85,10 @@ input {
   margin-top: 0.75em;
   padding: 0.2em;
   width: 480px;
+}
+
+.no-results {
+  display: none;
 }
 
 .frame-outer {
