--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -42,6 +42,8 @@
           %input{name: "query", type: "text"}
 
     %article
+      %h3.no-results
+        Couldn&rsquo;t find any unsafe images
       #results
       #result
         .frame-outer
@@ -55,7 +57,7 @@
         <a href="http://www.ruby-lang.org/en/">Ruby</a>,
         <a href="http://www.sinatrarb.com/">Sinatra</a>,
         <a href="http://www.flickr.com/">Flickr</a>, and
-        Rule 34.
+        Rule 34
 
     %script{src: "https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"}
     %script{src: "/facebox.js"}
