made verbiage parallel

--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -43,7 +43,7 @@
 
     %article
       %h3.no-results
-        Couldn&rsquo;t find any unsafe images
+        Couldn&rsquo;t find any unsafe photos
       #results
       #result
         .frame-outer
