--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -41,6 +41,8 @@
           %input{name: "query", type: "text"}
 
     %article
+      %p.loading
+        Searching&hellip;
       #results
       #result
         .frame-outer
