--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -26,7 +26,7 @@
     %title rubber duckie
     %meta{charset: "utf-8"}
     %link{rel: "stylesheet", href: "/facebox.css"}
-    %link{rel: "stylesheet", href: "/style.css"}
+    %link{rel: "stylesheet", href: "/duckie.css"}
 
   %body
     %hgroup
@@ -48,7 +48,7 @@
         .frame-outer
           .frame-inner
             %a{class: "photo", rel: "facebox", href: "http://1.gravatar.com/avatar/1fd20d1487b58d9071eb860447c65e24?size=420"}
-              %img{class: "photo", src: "http://1.gravatar.com/avatar/1fd20d1487b58d9071eb860447c65e24?size=420", alt: "result"}
+              %img{class: "photo", src: "/spinner.png", alt: "result"}
       %h3.no-results
         No naughty photos related to &ldquo;<span class="query"></span>&rdquo;
 
@@ -62,4 +62,4 @@
 
     %script{src: "https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"}
     %script{src: "/facebox.js"}
-    %script{src: "/script.js"}
+    %script{src: "/duckie.js"}
