switched from using spinner.png to 1x1 spacer.gif for placeholder image in result HTML template, for a less jarring initial page load

--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -47,8 +47,8 @@
       #result
         .frame-outer
           .frame-inner
-            %a{class: "photo", rel: "facebox", href: "http://1.gravatar.com/avatar/1fd20d1487b58d9071eb860447c65e24?size=420"}
-              %img{class: "photo", src: "/spinner.png", alt: "result"}
+            %a{class: "photo", rel: "facebox", href: "/spacer.gif"}
+              %img{class: "photo", src: "/spacer.gif", alt: "result"}
       %h3.no-results
         No naughty photos related to &ldquo;<span class="query"></span>&rdquo;
 
