prevented Facebox from being blown out by large images

--- a/duckie/public/duckie.css
+++ b/duckie/public/duckie.css
@@ -135,6 +135,11 @@ img.photo:hover {
   opacity: 1.0;
 }
 
+#facebox img {
+  max-width: 640px;
+  max-height: 480px;
+}
+
 .no-results {
   display: none;
 }
