--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -48,7 +48,7 @@
         .frame-outer
           .frame-inner
             %a{class: "photo", rel: "facebox", href: "/spacer.gif"}
-              %img{class: "photo", src: "/spacer.gif", alt: "result"}
+              %img{class: "photo lazy", "data-original" => "/spacer.gif", src: "/spacer.gif", alt: "result"}
       %h3.no-results
         No naughty photos related to &ldquo;<span class="query"></span>&rdquo;
 
@@ -62,4 +62,5 @@
 
     %script{src: "https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"}
     %script{src: "/facebox.js"}
+    %script{src: "/jquery.lazyload.min.js"}
     %script{src: "/duckie.js"}
