--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -56,6 +56,7 @@
       %p
         Powered by
         <a href="http://www.ruby-lang.org/en/">Ruby</a>,
+        <a href="http://redis.io/">Redis</a>,
         <a href="http://www.sinatrarb.com/">Sinatra</a>,
         <a href="http://www.flickr.com/">Flickr</a>, and
         Rule 34
