--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -23,7 +23,7 @@
 
 %html{lang: "en"}
   %head
-    %title rubber duckie
+    %title rubber duckie - naughty photo search
     %meta{charset: "utf-8"}
     %link{rel: "stylesheet", href: "/facebox.css"}
     %link{rel: "stylesheet", href: "/duckie.css"}
@@ -44,11 +44,12 @@
       %p.loading
         Searching&hellip;
       #results
-      #result
-        .frame-outer
-          .frame-inner
-            %a{class: "photo", rel: "facebox", href: "/spacer.gif"}
-              %img{class: "photo lazy", "data-original" => "/spacer.gif", src: "/spacer.gif", alt: "result"}
+      .hidden
+        #result
+          .frame-outer
+            .frame-inner
+              %a{class: "photo", rel: "facebox", href: "/spacer.gif"}
+                %img{class: "photo lazy", "data-original" => "/spacer.gif", src: "/spacer.gif", alt: "result"}
       %h3.no-results
         No naughty photos related to &ldquo;<span class="query"></span>&rdquo;
 
