--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -44,7 +44,7 @@
       %p.loading
         Searching&hellip;
       #results
-      .hidden
+      #templates
         #result
           .frame-outer
             .frame-inner
