used HTML5 instead of jQuery to autofocus search onload

--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -38,7 +38,7 @@
     %article
       %form#search{method: "get", action: "/search", autocomplete: "off"}
         %fieldset
-          %input{name: "query", type: "text"}
+          %input{name: "query", type: "text", autofocus: ""}
 
     %article
       %p.loading
