--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -41,7 +41,7 @@
           %input{name: "query", type: "text", autofocus: ""}
 
     %article
-      %p.loading
+      %p#loading
         Searching&hellip;
       #results
       #templates
@@ -50,7 +50,7 @@
             .frame-inner
               %a{class: "photo", rel: "facebox", href: "/spacer.gif"}
                 %img{class: "photo lazy", "data-original" => "/spacer.gif", src: "/spacer.gif", alt: "result"}
-      %h3.no-results
+      %h3#no-results
         No naughty photos related to &ldquo;<span class="query"></span>&rdquo;
 
     %footer
