removed leading, trailing, and duplicate whitespace from search queries

--- a/duckie/public/duckie.css
+++ b/duckie/public/duckie.css
@@ -1,5 +1,5 @@
 /*---------------------------------------------------------------------------*\
- |   style.css                                                               |
+ |   duckie.css                                                              |
  |                                                                           |
  |   Copyright (c) 2012, Rajiv Bakulesh Shah, original author.               |
  |                                                                           |
