presented error message on timeout

--- a/duckie/views/index.haml
+++ b/duckie/views/index.haml
@@ -52,6 +52,8 @@
                 %img{class: "photo lazy", "data-original" => "/spacer.gif", src: "/spacer.gif", alt: "result"}
       %h3#no-results
         No naughty photos related to &ldquo;<span class="query"></span>&rdquo;
+      %h3#broken
+        Try a different query
 
     %footer
       %p
