moved loading spinner to inside search bar

--- a/duckie/public/duckie.css
+++ b/duckie/public/duckie.css
@@ -87,14 +87,14 @@ input {
 }
 
 #loading {
-  display: none;
-  height: 200px;
-  width: 200px;
-  text-indent: 250px;
-  -webkit-mask-image: url(/spinner.png);
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  margin-left: -31px;
+  -webkit-mask-box-image: url(/spinner.png);
   background-color: #516064;
   -webkit-animation: rotate-spinner;
-  -webkit-animation-duration: 2.5s;
+  -webkit-animation-duration: 1.5s;
   -webkit-animation-iteration-count: infinite;
   -webkit-animation-timing-function: linear;
 }
